<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.ororo.auto.jigokumimi.R" />

        <variable
            name="viewModel"
            type="com.ororo.auto.jigokumimi.ui.result.MiniPlayerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/miniPlayerLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_l"
        android:background="@color/colorPrimary"
        android:visibility="visible"
        tools:context=".ui.result.MiniPlayerFragment">


        <TextView
            android:id="@+id/remainingTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_s"
            android:text="@{viewModel.playingTrackRemainingTime}"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_xs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/playStopButton"
            tools:text="3:00" />

        <TextView
            android:id="@+id/rankTrackNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_m"
            android:layout_marginTop="@dimen/spacing_s"
            android:layout_marginEnd="@dimen/spacing_s"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_m"
            app:layout_constraintEnd_toStartOf="@+id/miniPlayerSaveTrackButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:trackIndexForRankTrack="@{viewModel.playingTrackIndex}"
            app:trackListForRankTrack="@{viewModel.tracklist}"
            tools:text="99 . Track Name" />

        <TextView
            android:id="@+id/artistAlbumText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_m"
            android:layout_marginTop="@dimen/spacing_s"
            android:layout_marginEnd="@dimen/spacing_s"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_s"
            app:layout_constraintEnd_toStartOf="@+id/miniPlayerSaveTrackButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rankTrackNameText"
            app:trackIndexForArtistAlbum="@{viewModel.playingTrackIndex}"
            app:trackListForArtistAlbum="@{viewModel.tracklist}"
            tools:text="Artist - Album" />

        <ImageButton
            android:id="@+id/playStopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nextButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/previousButton"
            app:srcCompat="@drawable/ic_play_arrow" />

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            app:layout_constraintBottom_toBottomOf="@+id/playStopButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/playStopButton"
            app:srcCompat="@drawable/ic_skip_next" />

        <ImageButton
            android:id="@+id/previousButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            app:layout_constraintBottom_toBottomOf="@+id/playStopButton"
            app:layout_constraintEnd_toStartOf="@+id/playStopButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_skip_previous" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_l"
            android:layout_marginEnd="@dimen/spacing_l"
            android:progress="@{viewModel.playingTrackCurrentPosition}"
            app:layout_constraintBottom_toTopOf="@+id/playStopButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artistAlbumText" />

        <TextView
            android:id="@+id/elapsedTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_s"
            android:text="@{viewModel.playingTrackElapsedTime}"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_xs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/playStopButton"
            tools:text="0:00" />

        <ImageButton
            android:id="@+id/miniPlayerSaveTrackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_s"
            android:layout_marginEnd="@dimen/spacing_m"
            android:layout_marginBottom="@dimen/spacing_s"
            android:background="@color/colorTransparent"
            android:scaleType="center"
            app:layout_constraintBottom_toTopOf="@+id/seekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:trackIndexForFavIcon="@{viewModel.playingTrackIndex}"
            app:trackListForFavIcon="@{viewModel.tracklist}"
            tools:srcCompat="@drawable/ic_favorite_border" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>