...
    <string name="token_expired_error_message">しばらく操作されていなかったため、認証期限が切れました。\n再認証を行って下さい｡</string>
    <string name="request_success_message">通信に成功しました｡</string>
    <string name="request_fail_message">サーバー側に予期せぬエラーが発生しました。\nしばらく時間を置いて再度お試しください。</string>
    <string name="success_sign_up">新規登録が完了しました。</string>
    <string name="follow_artist_message">%1$s をSpotify上でフォローしました｡</string>
    <string name="un_follow_artist_message">%1$s をSpotify上でフォロー解除しました｡</string>
    <string name="save_track_message">%1$s をSpotify上のお気に入り曲に追加しました｡</string>
    <string name="remove_track_message">%1$s をSpotify上のお気に入り曲から削除しました｡</string>
    <string name="remove_history_message">%1$s の検索履歴を削除しました｡</string>
    <string name="permission_denied_message">権限が不十分なため､アプリを実行できません｡</string>
    <string name="finish_demo_message">デモモードのためアプリを終了しました。正規のご利用の場合は再度アプリを起動して下さい。</string>

    <!--  title-->
    <string name="title_demo">(Demo)</string>
...
