...
                android:text="@{song.name}"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/text_black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/queueButton"
                app:layout_constraintStart_toEndOf="@+id/songThumbnail"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="song name" />


            <TextView
...
